Wrap li content in anchor tags and give them animations on hover

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
       
       <div class="header">
         <div class="header-logo">
-          <img src="icons/google-tree.svg">
+          <a><img src="icons/google-tree.svg"></a>
         </div>
         <div class="header-links">
           <ul>
-            <li>About</li>
-            <li>Products</li>
-            <li>Contacts</li>
+            <li><a href="">About</a></li>
+            <li><a href="">Products</a></li>
+            <li><a href="">Contact info</a></li>
           </ul>
         </div>
       </div>
@@ -36,9 +36,9 @@
 
       <div class="nav">
         <ul>
-          <li>Featured</li>
-          <li>Most Viewed</li>
-          <li>Latest</li>
+          <li><a href="">Featured</a></li>
+          <li><a href="">Most Viewed</a></li>
+          <li><a href="">Latest</a></li>
         </ul>
       </div>
 
